--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-navigation": "^4.1.0",
     "react-navigation-stack": "^2.1.0",
     "react-native-maps": "0.26.1",
-    "expo-location": "~8.0.0"
+    "expo-location": "~8.0.0",
+    "react-native-webview": "7.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
